fix: color list icon, refactoring code

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="horizontal"
+    android:keepScreenOn="true"
     tools:context=".MainActivity">
 
     <!-- This is the parent RecyclerView-->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/parent_recyclerview"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
