--- a/app/src/main/res/layout/child_item.xml
+++ b/app/src/main/res/layout/child_item.xml
@@ -2,8 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:scrollbars="horizontal">
+    android:layout_height="wrap_content">
 
     <!--CardView that holds the elements
         of the child RecyclerView -->
@@ -27,7 +26,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginStart="5dp"
-                android:background="@color/black"
+                android:background="@color/turquesa"
                 android:src="@drawable/ic_launcher_foreground"/>
 
             <LinearLayout
